--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -59,6 +59,7 @@
 	</dependencyManagement>
 
 	<build>
+	    <finalName>api-gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
