--- a/problem_service/src/main/resources/application.properties
+++ b/problem_service/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 spring.application.name=problem-service
 server.port = 8090
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/problemdb
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/problemdb
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/problemdb
+#spring.datasource.username=postgres
+#spring.datasource.password=12345
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+##eureka.client.service-url.defaultZone=http://service_registry:8761/eureka/
+##eureka.client.register-with-eureka=true
+##eureka.client.fetch-registry=true
+# Actuator for health checks (important)
+##management.endpoints.web.exposure.include=*
+##management.endpoint.health.show-details=alway
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://service-registry:8765/eureka
