--- a/exam_service/pom.xml
+++ b/exam_service/pom.xml
@@ -68,6 +68,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>exam-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
