fixed exam service

--- a/exam_service/src/main/resources/application.properties
+++ b/exam_service/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=exam-service
 server.port = 8070
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/examdb
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/examdb
+#spring.datasource.username=postgres
+#spring.datasource.password=12345
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://service-registry:8761/eureka
