fixed docker compose for exam service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,29 @@ services:
     networks:
       - spring-net
       
+  exam_service:
+    image: exam-service:latest
+    build:
+      context: ./exam_service
+    ports:
+      - "8070:8070"
+    environment:
+      - SPRING_APPLICATION_NAME=exam-service
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/examdb
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=12345
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_JPA_SHOW_SQL=true
+      - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
+      # Eureka client config
+      #- EUREKA_CLIENT_REGISTER_WITH_EUREKA=true
+      #- EUREKA_CLIENT_FETCH_REGISTRY=true
+      #- EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-registry:8761/eureka/
+    depends_on:
+      - service-registry
+    networks:
+      - spring-net
+      
   api-gateway:
     image: api-gateway:latest
     build:
